# opengl-practice

./: .gitignore  CMakeLists.txt
include/: Camera.hpp  RenderWindow.hpp
shaders/: floor_vert.glsl  frag.glsl  vert.glsl
src/: camera.cpp  main.cpp  renderwindow.cpp
